fixed alignment problem of navbar

--- a/CSS Task/style2.css
+++ b/CSS Task/style2.css
@@ -1,5 +1,7 @@
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body{
@@ -16,34 +18,30 @@ body{
 
 .navbar{
     background: rgb(95, 153, 234);
-    max-width: 100%;
+    width: 100%;
+    text-align: center;
 }
 .container1{
-    max-width: 100%;
-    padding: 0 70px;
-    margin: auto;
-    position: relative;
+    display: flex;
+    width: 800px;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
 img{
     max-height: 50px;
 }
-.container1 ul{
-    position: absolute;
-    top: 0;
-    right: 70px;
+ul{    
     list-style-type: none;
-    display: flex;
 }
 li a{
-    text-decoration: none;
-    display: inline-block;
-    padding: 4px 1rem;
-    margin: 2px;
-    font-size: 1rem;
+    text-decoration: none;    
+    font-size: 15px;
     color: white;
-
+    display: inline-block;
+    padding: 15px 13px;   
 }
+
 li a:hover{
     background: white;
     color: black;
@@ -53,7 +51,6 @@ li a:hover{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 100%;
     height: 10rem;
 }
 .right{
@@ -69,19 +66,19 @@ li a:hover{
     background: rgb(51, 71, 111);
 }
 .container2{
-    max-width: 100%;
-    padding: 0 70px;
+    width: 800px;
     margin: auto;
 }
 main{
     max-width: 100%;
     height: 350px;
+    margin: 5px 0px;
 }
 .container3{
     display: flex;
-    padding: 0 70px;
+    justify-content: space-between;
     margin: auto;
-    max-width: 100%;
+    max-width: 800px;
     height: 100%;
 }
 .leftSide{
@@ -98,7 +95,7 @@ main{
 .leftDown{
     position: absolute;
     top: 30px;
-    left: -12px;
+    left: -40px;
     height: 18rem;
     width: 13em;
     background: rgb(212, 141, 198);
@@ -106,7 +103,6 @@ main{
 .rightSide{
     display: flex;
     flex-direction: column;
-    align-content: space-between;
     width: 55%;
     margin: 5px 0 5px 5px;
 }
@@ -128,13 +124,16 @@ input, select{
 input, button, select{
     margin: 3px;
     border: 1px solid rgb(65, 65, 41);
-    border-radius: 2px;
+    border-radius: 4px;
     background: rgb(137, 203, 51);
+    font-size: 120%;
+}
+button{
+    padding: 3px;
 }
 footer{
     display: block;
     background: blue;
-    /* height: 30px; */
 }
 footer ul{
     display: flex;
